# stf

./: .gitignore  AGENT.md  AGENTS.md  README.md  data  pyproject.toml
configs/flow/: change_aware_fine_t1_baseline_matched_cia.py  change_aware_fine_t1_noise_warmup_200_tail.py  change_aware_perf_24g.py  change_aware_perf_24g_compile.py  change_aware_toy.py  change_aware_toy_fine_t1_noise_warmup_300.py  change_aware_toy_fine_t1_noise_warmup_500.py  change_aware_toy_hf_grad.py  change_aware_toy_hf_grad_lap.py  change_aware_toy_hf_grad_lap_rank.py  minimal.py  template_all_options.py
configs/stfdiff/: change_aware_toy.py  minimal.py
docs/: architecture.md  config.md  migration.md  plan.md  programm.md  progress.md  变化场景改进计划.md  开发手册.md
stf/: __init__.py
stf/api/: __init__.py  entrypoints.py
stf/cli/: main.py
stf/compat/: __init__.py  checkpoint.py  migration.py
stf/config/: __init__.py  loader.py  types.py
stf/data/: __init__.py  dataset.py
stf/engine/: __init__.py  base.py  eval.py  predict.py  train.py
stf/io/: __init__.py  artifacts.py  images.py
stf/logging/: __init__.py  backend_logger.py  tracker.py  txt_logger.py
stf/metrics/: __init__.py  trp.py
stf/models/: __init__.py  change_maps.py  diffusion.py  flow.py  hf_losses.py  pred_resnet.py  unet.py
stf/utils/: __init__.py  random.py
tests/smoke/: test_attention_sdpa.py  test_cli_help.py  test_config_loader.py  test_data_serialization_io.py  test_fine_t1_noise_warmup.py  (+8 more)
tools/: dump_sampler_layout.py  export_tb_scalars.py  serialize_dataset.py  summarize_train_log.py  train_queue.sh
(+8 files in other folders)
